# TahoeOS

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
Firmware/: README.md
Hardware/Gerber_Back_2024-05-26/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Hardware/Gerber_Core_2024-05-26/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Software/IAP_F411/: CMakeLists.txt  openocd.cfg  startup_stm32f411xe_gcc.s
Software/IAP_F411/BSP/POWER/: power.c
Software/IAP_F411/Core/Src/: main.c  stm32f4xx_it.c
Software/IAP_F411/Ymodem/: menu.c
Software/IAP_F411/cmake/: arm-none-eabi.cmake
Software/IAP_F411/linker/: STM32F411CEUx_BOOT.ld
Software/IAP_F411/tools/: flash_debug.sh
Software/OV_Watch/Core/Inc/: stm32f4xx_it.h
Software/OV_Watch/Core/Src/: freertos.c  main.c  stm32f4xx_it.c
Software/OV_Watch/User/Tasks/Src/: user_DataSaveTask.c  user_HardwareInitTask.c  user_MessageSendTask.c  user_RunModeTasks.c  user_SensUpdateTask.c  user_TasksInit.c
docs/: bringup.md  display-debug-2026-02-06.md
lv_sim_vscode_win/user_test/lvgl/tests/: CMakeLists.txt
test/: ov_watch_factory_test.py
